@@ -30,7 +30,7 @@ require_once("../lib/include.php");
 
 // if this page was accessed directly, and the secure param name is not in the URL
 // but it is in the session, assume it is correct.
-if( isset($_SESSION[CMS_USER_KEY]) && !isset($_GET[CMS_SECURE_PARAM_NAME]) ) $_REQUEST[CMS_SECURE_PARAM_NAME] = $_SESSION[CMS_USER_KEY];
+if( isset($_SESSION[CMS_USER_KEY]) && !isset($_GET[CMS_SECURE_PARAM_NAME]) ) $_GET[CMS_SECURE_PARAM_NAME] = $_SESSION[CMS_USER_KEY];
 
 check_login();
 
