@@ -1,43 +1,14 @@
 <div class="pagecontainer">
 
 {$theme->StartTabHeaders()}
-	{$theme->SetTabHeader('database',lang('sysmaintab_database'),isset($active_database))}
 	{$theme->SetTabHeader('content',lang('sysmaintab_content'),isset($active_content))}
+	{$theme->SetTabHeader('database',lang('sysmaintab_database'),isset($active_database))}
 	{if isset($changelog)}
 		{$theme->SetTabHeader('changelog',lang('sysmaintab_changelog'),isset($active_changelog))}
 	{/if}
 {$theme->EndTabHeaders()}
 
 {$theme->StartTabContent()}
-
-	{$theme->StartTab('database')}
-		<form action="{$formurl}" method="post">
-			<fieldset>
-				<legend>{'sysmain_database_status'|lang}:&nbsp;</legend>
-				<p>{$tablecount} {'sysmain_tablesfound'|lang:$nonseqcount}</p>
-
-				{if $errorcount==0}
-					<p class='green'><strong>{'sysmain_nostr_errors'|lang}</strong></p>
-				{else}
-					<p class='red'><strong>{$errorcount} {if $errorcount>1}{'sysmain_str_errors'|lang}{else}{'sysmain_str_error'|lang}{/if}:  {$errortables}</strong></p>
-				{/if}
-
-				<div class="pageoverflow">
-					<p class="pagetext">{'sysmain_optimizetables'|lang}:</p>
-					<p class="pageinput">
-						<input class="pagebutton" type="submit" name="optimizeall" value="{'sysmain_optimize'|lang}"/>
-					</p>
-				</div>
-				<div class="pageoverflow">
-					<p class="pagetext">{'sysmain_repairtables'|lang}:</p>
-					<p class="pageinput">
-						<input class="pagebutton" type="submit" name="repairall" value="{'sysmain_repair'|lang}"/>
-					</p>
-				</div>
-			</fieldset>
-		</form>
-	{$theme->EndTab()}
-
 
 	{$theme->StartTab('content')}
 		<form action="{$formurl}" method="post">
@@ -111,6 +82,33 @@
 		</fieldset>
 	{$theme->EndTab()}
 
+	{$theme->StartTab('database')}
+		<form action="{$formurl}" method="post">
+			<fieldset>
+				<legend>{'sysmain_database_status'|lang}:&nbsp;</legend>
+				<p>{$tablecount} {'sysmain_tablesfound'|lang:$nonseqcount}</p>
+
+				{if $errorcount==0}
+					<p class='green'><strong>{'sysmain_nostr_errors'|lang}</strong></p>
+				{else}
+					<p class='red'><strong>{$errorcount} {if $errorcount>1}{'sysmain_str_errors'|lang}{else}{'sysmain_str_error'|lang}{/if}:  {$errortables}</strong></p>
+				{/if}
+
+				<div class="pageoverflow">
+					<p class="pagetext">{'sysmain_optimizetables'|lang}:</p>
+					<p class="pageinput">
+						<input class="pagebutton" type="submit" name="optimizeall" value="{'sysmain_optimize'|lang}"/>
+					</p>
+				</div>
+				<div class="pageoverflow">
+					<p class="pagetext">{'sysmain_repairtables'|lang}:</p>
+					<p class="pageinput">
+						<input class="pagebutton" type="submit" name="repairall" value="{'sysmain_repair'|lang}"/>
+					</p>
+				</div>
+			</fieldset>
+		</form>
+	{$theme->EndTab()}
 
 	{if isset($changelog)}
 		{$theme->StartTab('changelog')}
