@@ -100,10 +100,9 @@ function check_login($no_redirect = false)
             // redirect to the admin login.php
             // use SCRIPT_FILENAME and make sure it validates with the root_path
             $config = \cms_config::get_instance();
-            if( startswith($_SERVER['SCRIPT_FILENAME'],$config['root_path']) ) {
+            if( startswith(realpath($_SERVER['SCRIPT_FILENAME']),$config['root_path']) ) {
                 $_SESSION['login_redirect_to'] = $_SERVER['REQUEST_URI'];
             }
-            $login_ops->deauthenticate();
             $config = \cms_config::get_instance();
             redirect($config['admin_url']."/login.php");
         }
