@@ -5,6 +5,10 @@ Core - General
   - BR #12311 - log_performance_info - undefined variable: queries.
   - BR #12357 - Filepicker dropzone size issue.
   - Fix to the Admin home page landing after login.
+  - FR #12349 - Swap tabs on System Maintenance page
+  - FR #12345 - More user friendly admin session handling (partly implemented)
+  - Browsing to the main admin page in a new browser tab during a running session won't redirect to login form anymore
+  - Fix to admin redirection after login on Windows platform
 
 FileManager v...
   - Dropzone improvement like core FilePicker.
